--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,9 @@
 
 /* seccion nosotras */
 .img-nos {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: auto;
+  object-fit: cover;
 }
 
 .nombre {
