--- a/scss/_nosotras.scss
+++ b/scss/_nosotras.scss
@@ -4,8 +4,9 @@
 /* seccion nosotras */
 
 .img-nos {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: auto;
+    object-fit: cover;
 }
 
 .nombre {
