--- a/css/style.css
+++ b/css/style.css
@@ -258,4 +258,8 @@ h1 {
   padding: 20px;
 }
 
+img[src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
+  display: none;
+}
+
 /*# sourceMappingURL=style.css.map */
