--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 }
 
 .imagenInicio {
-  background-image: url("./src/img/vagon.jpg");
+  background-image: url("https://ibb.co/JtpgVnN");
   background-size: cover;
 }
 
