--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -9,7 +9,7 @@
 }
 
 .imagenInicio {
-    background-image: url("./src/img/vagon.JPG");
+    background-image: url("/src/img/vagon.JPG");
     background-size: cover;
 }
 
